--- a/services.html
+++ b/services.html
@@ -94,8 +94,8 @@
     </div>
   </div>
 
-  
-  
+
+
   <div class="untree_co-section">
     <div class="container">
       <div class="row">
@@ -295,7 +295,7 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="widget">
-              <h3 class="heading">Contact</h3>
+              <h3 class="heading">Contactos</h3>
               <ul class="list-unstyled quick-info links">
                 <li class="email"><a href="#">mail@example.com</a></li>
                 <li class="phone"><a href="#">+1 222 212 3819</a></li>
@@ -316,7 +316,7 @@
             <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co" class="link-highlight">Untree.co</a> <!-- License information: https://untree.co/license/ --> Distributed By <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
             </p>
           </div>
-          
+
         </div>
       </div>
     </div>
@@ -341,7 +341,7 @@
   <script src="js/daterangepicker.js"></script>
 
   <script src="js/typed.js"></script>
-  
+
   <script src="js/custom.js"></script>
 
 </body>
