--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>Tour Free Bootstrap Template for Travel Agency by Untree.co</title>
+	<title>onTour</title>
 </head>
 
 <body>
@@ -47,12 +47,12 @@
 	<nav class="site-nav">
 		<div class="container">
 			<div class="site-navigation">
-				<a href="index.html" class="logo m-0">Tour <span class="text-primary">.</span></a>
+				<a href="index.html" class="logo m-0">Viajes <span class="text-primary">.</span></a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li class="active"><a href="index.html">Inicio</a></li>
 					<li class="has-children">
-						<a href="#">Dropdown</a>
+						<a href="#">Sesion</a>
 						<ul class="dropdown">
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#">Menu One</a></li>
@@ -67,9 +67,9 @@
 							<li><a href="#">Menu Three</a></li>
 						</ul>
 					</li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="services.html">Servicios</a></li>
+					<li><a href="about.html">Nosotros</a></li>
+					<li><a href="contact.html">Contactenos</a></li>
 				</ul>
 
 				<a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
@@ -86,14 +86,14 @@
 			<div class="row align-items-center">
 				<div class="col-lg-7">
 					<div class="intro-wrap">
-						<h1 class="mb-5"><span class="d-block">Let's Enjoy Your</span> Trip In <span class="typed-words"></span></h1>
+						<h1 class="mb-5"><span class="d-block">Disfruta tus vacaciones</span> Viaja a <span class="typed-words"></span></h1>
 
 						<div class="row">
 							<div class="col-12">
 								<form class="form">
 									<div class="row mb-2">
-										<h3>Desea vivir una experiencia inovidable</h3>
-										<a href="contact.html" class="btn btn-primary btn-block">Contacto</a>
+										<h3>Desea la mejor experiencia</h3>
+										<a href="contact.html" class="btn btn-primary btn-block">Contactenos</a>
 
 									</div>
 								</form>
@@ -119,7 +119,7 @@
 		<div class="container">
 			<div class="row mb-5 justify-content-center">
 				<div class="col-lg-6 text-center">
-					<h2 class="section-title text-center mb-3">Our Services</h2>
+					<h2 class="section-title text-center mb-3">nuestros servicios</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 				</div>
 			</div>
