--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row mb-5 justify-content-center">
 				<div class="col-lg-6 text-center">
 					<h2 class="section-title text-center mb-3">nuestros servicios</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p>Vive experiencias únicas y memorables con nuestros tours diseñados para satisfacer todos los gustos y presupuestos.</p>
 				</div>
 			</div>
 			<div class="row align-items-stretch">
@@ -133,16 +133,16 @@
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
 							<span class="flaticon-house display-4 text-primary"></span>
-							<h3>Beautiful Condo</h3>
-							<p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
+							<h3>Hermosas vistas</h3>
+							<p class="mb-0">Contempla las impresionantes vistas panorámicas que te dejarán sin aliento.</p>
 						</div>
 					</div>
 
 					<div class="feature-1 ">
 						<div class="align-self-center">
 							<span class="flaticon-restaurant display-4 text-primary"></span>
-							<h3>Restaurants & Cafe</h3>
-							<p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
+							<h3>Restaurantes</h3>
+							<p class="mb-0">Embárcate en un viaje gastronómico excepcional con nuestra agencia, donde cada destino te brindará una experiencia culinaria única y deliciosa.</p>
 						</div>
 					</div>
 
@@ -153,16 +153,16 @@
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
 							<span class="flaticon-mail display-4 text-primary"></span>
-							<h3>Easy to Connect</h3>
-							<p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
+							<h3>facil de contactar</h3>
+							<p class="mb-0">Estamos a solo un clic o una llamada de distancia para resolver todas tus dudas e inquietudes.</p>
 						</div>
 					</div>
 
 					<div class="feature-1 d-md-flex">
 						<div class="align-self-center">
 							<span class="flaticon-phone-call display-4 text-primary"></span>
-							<h3>24/7 Support</h3>
-							<p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
+							<h3>Atencion 24/7</h3>
+							<p class="mb-0">Estamos aquí para brindarte asistencia las 24 horas del día, los 7 días de la semana, sin importar la hora ni el día.</p>
 						</div>
 					</div>
 
@@ -172,51 +172,14 @@
 		</div>
 	</div>
 
-	<div class="untree_co-section count-numbers py-5">
-		<div class="container">
-			<div class="row">
-				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
-					<div class="counter-wrap">
-						<div class="counter">
-							<span class="" data-number="9313">0</span>
-						</div>
-						<span class="caption">No. of Travels</span>
-					</div>
-				</div>
-				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
-					<div class="counter-wrap">
-						<div class="counter">
-							<span class="" data-number="8492">0</span>
-						</div>
-						<span class="caption">No. of Clients</span>
-					</div>
-				</div>
-				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
-					<div class="counter-wrap">
-						<div class="counter">
-							<span class="" data-number="100">0</span>
-						</div>
-						<span class="caption">No. of Employees</span>
-					</div>
-				</div>
-				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
-					<div class="counter-wrap">
-						<div class="counter">
-							<span class="" data-number="120">0</span>
-						</div>
-						<span class="caption">No. of Countries</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
 
 
 
 	<div class="untree_co-section">
 		<div class="container">
 			<div class="row text-center justify-content-center mb-5">
-				<div class="col-lg-7"><h2 class="section-title text-center">Popular Destination</h2></div>
+				<div class="col-lg-7"><h2 class="section-title text-center">Destinos populares</h2></div>
 			</div>
 
 			<div class="owl-carousel owl-3-slider">
@@ -292,16 +255,16 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-7 text-center">
-					<h2 class="section-title text-center mb-5">Testimonials</h2>
+					<h2 class="section-title text-center mb-5">testimonios</h2>
 
 					<div class="owl-single owl-carousel no-nav">
 						<div class="testimonial mx-auto">
 							<figure class="img-wrap">
 								<img src="images/person_2.jpg" alt="Image" class="img-fluid">
 							</figure>
-							<h3 class="name">Adam Aderson</h3>
+							<h3 class="name">Amelia Nuñez</h3>
 							<blockquote>
-								<p>&ldquo;There live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;Mi viaje con esta agencia fue simplemente increíble. No solo disfruté de destinos impresionantes, sino que también recibí un servicio de primera clase. Cada detalle fue cuidadosamente planeado y coordinado, lo que hizo que mi experiencia fuera fluida y sin estrés. Definitivamente recomendaría esta agencia a cualquier persona que esté buscando vivir aventuras inolvidables.&rdquo;</p>
 							</blockquote>
 						</div>
 
@@ -309,9 +272,9 @@
 							<figure class="img-wrap">
 								<img src="images/person_3.jpg" alt="Image" class="img-fluid">
 							</figure>
-							<h3 class="name">Lukas Devlin</h3>
+							<h3 class="name">Rodrigo Veloso</h3>
 							<blockquote>
-								<p>&ldquo;There live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;¡Increíble! Este viaje superó todas mis expectativas. Todo estuvo perfectamente coordinado y disfruté cada momento. Definitivamente viajaré con ellos nuevamente.&rdquo;</p>
 							</blockquote>
 						</div>
 
@@ -319,9 +282,9 @@
 							<figure class="img-wrap">
 								<img src="images/person_4.jpg" alt="Image" class="img-fluid">
 							</figure>
-							<h3 class="name">Kayla Bryant</h3>
+							<h3 class="name">Maria Gonzales</h3>
 							<blockquote>
-								<p>&ldquo;There live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;Recomendaría esta agencia sin dudarlo. Mi viaje fue perfecto en todos los sentidos. Los hoteles, los guías y las actividades fueron de primera clase. ¡Gracias por una experiencia memorable&rdquo;</p>
 							</blockquote>
 						</div>
 
@@ -337,8 +300,8 @@
 		<div class="container">
 			<div class="row justify-content-center text-center mb-5">
 				<div class="col-lg-6">
-					<h2 class="section-title text-center mb-3">Special Offers &amp; Discounts</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<h2 class="section-title text-center mb-3">Ofertas especiales y descuentos</h2>
+					<p>No dejes pasar nuestras irresistibles ofertas especiales y descuentos, tu oportunidad de disfrutar de increíbles experiencias de viaje a precios exclusivos. ¡Aprovecha estas oportunidades y haz realidad tus sueños de explorar el mundo!</p>
 				</div>
 			</div>
 			<div class="row">
@@ -424,59 +387,11 @@
 		</div>
 	</div>
 
-	<div class="untree_co-section">
-		<div class="container">
-			<div class="row justify-content-between align-items-center">
-				
-				<div class="col-lg-6">
-					<figure class="img-play-video">
-						<a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=mwtbEGNABWU" data-fancybox>
-							<span></span>
-						</a>
-						<img src="images/hero-slider-2.jpg" alt="Image" class="img-fluid rounded-20">
-					</figure>
-				</div>
 
-				<div class="col-lg-5">
-					<h2 class="section-title text-left mb-4">Take a look at Tour Video</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-
-					<p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
-					<ul class="list-unstyled two-col clearfix">
-						<li>Outdoor recreation activities</li>
-						<li>Airlines</li>
-						<li>Car Rentals</li>
-						<li>Cruise Lines</li>
-						<li>Hotels</li>
-						<li>Railways</li>
-						<li>Travel Insurance</li>
-						<li>Package Tours</li>
-						<li>Insurance</li>
-						<li>Guide Books</li>
-					</ul>
-
-					<p><a href="#" class="btn btn-primary">Get Started</a></p>
-
-					
-				</div>
-			</div>
-		</div>
-	</div>
 
 	
 	
-	<div class="py-5 cta-section">
-		<div class="container">
-			<div class="row text-center">
-				<div class="col-md-12">
-					<h2 class="mb-2 text-white">Lets you Explore the Best. Contact Us Now</h2>
-					<p class="mb-4 lead text-white text-white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, fugit?</p>
-					<p class="mb-0"><a href="booking.html" class="btn btn-outline-white text-white btn-md font-weight-bold">Get in touch</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
+
 
 	<div class="site-footer">
 		<div class="inner first">
